--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -13,3 +13,4 @@
 target=android-25
 android.library.reference.1=CordovaLib
 cordova.gradle.include.1=phonegap-plugin-barcodescanner/makeorder682870-barcodescanner.gradle
+android.library.reference.1=CordovaLib
